<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher">
        <ListPreference
            android:key="icon_theme"
            android:title="@string/icon_theme" />

    <PreferenceScreen android:title="@string/preferences_interface_homescreen_title"
        android:summary="@string/preferences_interface_homescreen_summary" >
    <PreferenceCategory android:title="@string/preferences_interface_homescreen_general_category">
        <com.android.launcher2.preference.DoubleNumberPickerPreference android:key="ui_homescreen_grid"
            android:title="@string/preferences_interface_homescreen_general_grid_title"
            android:summary="@string/preferences_interface_homescreen_general_grid_summary"
            launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
            launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
            launcher:defaultValue1="@integer/target_cell_count_x"
            launcher:defaultValue2="@integer/target_cell_count_y"
            launcher:max1="10"
            launcher:min1="3"
            launcher:max2="10"
            launcher:min2="3" />
        <CheckBoxPreference android:key="ui_homescreen_general_search"
            android:title="@string/preferences_interface_homescreen_general_search_title"
            android:summary="@string/preferences_interface_homescreen_general_search_summary"
            android:defaultValue="true" />
        <CheckBoxPreference android:key="ui_homescreen_stretch_screens"
            android:title="@string/preferences_interface_homescreen_general_stretch_screens_title"
            android:summary="@string/preferences_interface_homescreen_general_stretch_screens_summary"
            android:defaultValue="true" />
        <CheckBoxPreference android:key="ui_homescreen_general_hide_icon_labels"
            android:title="@string/preferences_interface_homescreen_general_hide_icon_labels_title"
            android:summary="@string/preferences_interface_homescreen_general_hide_icon_labels_summary"
            android:defaultValue="false" />
        <com.android.launcher2.preference.SeekBarDialogPreference android:key="ui_homescreen_icon_scale"
            android:title="@string/preferences_interface_general_icon_scale_title"
            android:summary="@string/preferences_interface_general_icon_scale_summary"
            launcher:min="80"
            launcher:max="120"
            launcher:defaultValueSeekbar="@integer/app_icon_scale_percentage" />
        <ListPreference
            android:key="ui_homescreen_folder_style"
            android:title="@string/preferences_interface_homescreen_folder_style_title"
            android:summary="@string/preferences_interface_homescreen_folder_style_summary"
            android:entries="@array/folder_icon_style_names"
            android:entryValues="@array/folder_icon_style_values"
            android:defaultValue="0" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_interface_homescreen_scrolling_category">
        <CheckBoxPreference android:key="ui_homescreen_scrolling_scroll_wallpaper"
            android:title="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_title"
            android:summary="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_summary"
            android:defaultValue="true" />
        <CheckBoxPreference android:key="ui_homescreen_scrolling_wallpaper_hack"
            android:title="@string/preferences_interface_homescreen_scrolling_wallpaper_hack_title"
            android:summary="@string/preferences_interface_homescreen_scrolling_wallpaper_hack_summary"
            android:defaultValue="@bool/config_workspaceDefaultWallpaperHack" />
        <ListPreference android:key="ui_homescreen_scrolling_transition_effect"
            android:title="@string/preferences_interface_homescreen_scrolling_transition_effect_title"
            android:summary="@string/preferences_interface_homescreen_scrolling_transition_effect_summary"
            android:entries="@array/preferences_interface_homescreen_scrolling_transition_effect_entries"
            android:entryValues="@array/preferences_interface_homescreen_scrolling_transition_effect_values"
            android:defaultValue="@string/config_workspaceDefaultTransitionEffect" />
        <CheckBoxPreference android:key="ui_homescreen_scrolling_fade_adjacent_screens"
            android:title="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_title"
            android:summary="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_summary"
            android:defaultValue="@bool/config_workspaceFadeAdjacentScreens" />
        <CheckBoxPreference android:key="ui_homescreen_scrolling_show_outlines"
            android:title="@string/preferences_interface_homescreen_scrolling_show_outlines_title"
            android:summary="@string/preferences_interface_homescreen_scrolling_show_outlines_summary"
            android:defaultValue="@bool/config_workspaceDefaultShowOutlines" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_interface_homescreen_indicator_category">
        <CheckBoxPreference android:key="ui_homescreen_indicator_enable"
            android:title="@string/preferences_interface_homescreen_indicator_enable_title"
            android:summary="@string/preferences_interface_homescreen_indicator_enable_summary"
            android:defaultValue="true" />
        <CheckBoxPreference android:key="ui_homescreen_indicator_fade"
            android:title="@string/preferences_interface_homescreen_indicator_fade_title"
            android:summary="@string/preferences_interface_homescreen_indicator_fade_summary"
            android:defaultValue="true"
            android:dependency="ui_homescreen_indicator_enable" />
        <ListPreference android:key="ui_homescreen_indicator_position"
            android:title="@string/preferences_interface_homescreen_indicator_position_title"
            android:summary="@string/preferences_interface_homescreen_indicator_position_summary"
            android:entries="@array/preferences_interface_homescreen_indicator_position_entries"
            android:entryValues="@array/preferences_interface_homescreen_indicator_position_values"
            android:defaultValue="0"
            android:dependency="ui_homescreen_indicator_enable" />
    </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/preferences_interface_drawer_title"
        android:summary="@string/preferences_interface_drawer_summary" >
    <PreferenceCategory android:title="@string/preferences_interface_drawer_category_title">
        <com.android.launcher2.preference.DoubleNumberPickerPreference android:key="ui_drawer_grid"
            android:title="@string/preferences_interface_drawer_app_grid_title"
            android:summary="@string/preferences_interface_drawer_app_grid_summary"
            launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
            launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
            launcher:defaultValue1="5"
            launcher:defaultValue2="4"
            launcher:max1="10"
            launcher:min1="3"
            launcher:max2="10"
            launcher:min2="3" />
        <com.android.launcher2.preference.DoubleNumberPickerPreference android:key="ui_drawer_widget_grid"
            android:title="@string/preferences_interface_drawer_widget_grid_title"
            android:summary="@string/preferences_interface_drawer_widget_grid_summary"
            launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
            launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
            launcher:defaultValue1="3"
            launcher:defaultValue2="2"
            launcher:max1="7"
            launcher:min1="1"
            launcher:max2="7"
            launcher:min2="1" />
        <CheckBoxPreference android:key="ui_drawer_widget_icon_style"
            android:title="@string/preferences_interface_drawer_widget_icon_style_title"
            android:summary="@string/preferences_interface_drawer_widget_icon_style_summary" />
        <com.android.launcher2.preference.SeekBarDialogPreference android:key="ui_drawer_icon_scale"
            android:title="@string/preferences_interface_general_icon_scale_title"
            android:summary="@string/preferences_interface_general_icon_scale_summary"
            launcher:min="80"
            launcher:max="120"
            launcher:defaultValueSeekbar="@integer/app_icon_scale_percentage" />
        <com.android.launcher2.preference.SeekBarDialogPreference android:key="ui_drawer_transparency"
            android:title="@string/preferences_interface_drawer_transparency_title"
            android:summary="@string/preferences_interface_drawer_transparency_summary"
            launcher:min="0"
            launcher:max="100"
            android:defaultValue="50" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_interface_drawer_scrolling_category">
        <ListPreference android:key="ui_drawer_scrolling_transition_effect"
            android:title="@string/preferences_interface_drawer_scrolling_transition_effect_title"
            android:summary="@string/preferences_interface_drawer_scrolling_transition_effect_summary"
            android:entries="@array/preferences_interface_homescreen_scrolling_transition_effect_entries"
            android:entryValues="@array/preferences_interface_homescreen_scrolling_transition_effect_values"
            android:defaultValue="@string/config_workspaceDefaultTransitionEffect" />
        <CheckBoxPreference android:key="ui_drawer_scrolling_fade_adjacent_screens"
            android:title="@string/preferences_interface_drawer_scrolling_fade_adjacent_screens_title"
            android:summary="@string/preferences_interface_drawer_scrolling_fade_adjacent_screens_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_interface_drawer_indicator_category">
        <CheckBoxPreference android:key="ui_drawer_indicator_enable"
            android:title="@string/preferences_interface_drawer_indicator_enable_title"
            android:summary="@string/preferences_interface_drawer_indicator_enable_summary"
            android:defaultValue="true" />
        <CheckBoxPreference android:key="ui_drawer_indicator_fade"
            android:title="@string/preferences_interface_drawer_indicator_fade_title"
            android:summary="@string/preferences_interface_drawer_indicator_fade_summary"
            android:defaultValue="true"
            android:dependency="ui_drawer_indicator_enable" />
        <ListPreference android:key="ui_drawer_indicator_position"
            android:title="@string/preferences_interface_drawer_indicator_position_title"
            android:summary="@string/preferences_interface_drawer_indicator_position_summary"
            android:entries="@array/preferences_interface_drawer_indicator_position_entries"
            android:entryValues="@array/preferences_interface_drawer_indicator_position_values"
            android:defaultValue="0"
            android:dependency="ui_drawer_indicator_enable" />
    </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/preferences_interface_dock_title"
        android:summary="@string/preferences_interface_dock_summary" >
    <PreferenceCategory android:title="@string/preferences_interface_dock_category_title">
        <CheckBoxPreference android:key="ui_dock_background"
            android:title="@string/preferences_interface_dock_background_title"
            android:summary="@string/preferences_interface_dock_background_summary"
            android:defaultValue="true" />
        <CheckBoxPreference android:key="ui_dock_divider"
            android:title="@string/preferences_interface_dock_divider_title"
            android:summary="@string/preferences_interface_dock_divider_summary"
            android:defaultValue="falsee" />
        <com.android.launcher2.preference.SeekBarDialogPreference android:key="ui_dock_icon_scale"
            android:title="@string/preferences_interface_dock_icon_scale_title"
            android:summary="@string/preferences_interface_dock_icon_scale_summary"
            launcher:min="80"
            launcher:max="120"
            android:defaultValue="@integer/hotseat_item_scale_percentage" />
    </PreferenceCategory>
    </PreferenceScreen>


        <PreferenceScreen android:title="@string/preferences_interface_homescreen_gestures_title"
                android:summary="@string/preferences_interface_homescreen_gestures_summary" >
            <ListPreference android:key="ui_homescreen_up_gesture"
                android:title="@string/preferences_interface_homescreen_gestures_up_gesture_title"
                android:summary=""
                android:entries="@array/gesture_target_names"
                android:entryValues="@array/gesture_target_values"
                android:defaultValue="nothing" />
            <ListPreference android:key="ui_homescreen_down_gesture"
                android:title="@string/preferences_interface_homescreen_gestures_down_gesture_title"
                android:summary=""
                android:entries="@array/gesture_target_names"
                android:entryValues="@array/gesture_target_values"
                android:defaultValue="nothing" />
            <ListPreference android:key="ui_homescreen_pinch_gesture"
                android:title="@string/preferences_interface_homescreen_gestures_pinch_gesture_title"
                android:summary=""
                android:entries="@array/gesture_target_names"
                android:entryValues="@array/gesture_target_values"
                android:defaultValue="nothing" />
            <ListPreference android:key="ui_homescreen_spread_gesture"
                android:title="@string/preferences_interface_homescreen_gestures_spread_gesture_title"
                android:summary=""
                android:entries="@array/gesture_target_names"
                android:entryValues="@array/gesture_target_values"
                android:defaultValue="nothing" />
        </PreferenceScreen>

</PreferenceScreen>